@@ -8,11 +8,9 @@ import com.mangaverse.backend.model.Manga.Status;
 import com.mangaverse.backend.repository.GenreRepository;
 import com.mangaverse.backend.repository.MangaRepository;
 import lombok.RequiredArgsConstructor;
-
-import org.springframework.http.ResponseEntity;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -21,92 +19,90 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class MangaService {
 
-        private final MangaRepository mangaRepository;
-        private final GenreRepository genreRepository;
+    private final MangaRepository mangaRepository;
+    private final GenreRepository genreRepository;
 
-        public List<MangaDto> getAllManga() {
-                return mangaRepository.findAll().stream()
-                                .map(m -> new MangaDto(
-                                                m.getId(),
-                                                m.getTitle(),
-                                                m.getCover(),
-                                                m.getRating(),
-                                                m.getStatus() != null ? m.getStatus().name() : null,
-                                                m.getAuthor(), // ✅ author
-                                                m.getDescription(), // ✅ description
-                                                m.getYear(), // ✅ year
-                                                m.getGenres() != null ? m.getGenres().stream().map(g -> g.getName())
-                                                                .collect(Collectors.toList()) : null,
-                                                m.getChapters() != null ? m.getChapters().size() : 0,
-                                                null // chapters list
-                                ))
-                                .collect(Collectors.toList()); // ✅ THIS WAS MISSING
+    // Paginated search by title/author and optional genre filter
+    public Page<MangaDto> searchManga(String search, String genre, Pageable pageable) {
+        return mangaRepository.searchManga(search, genre, pageable)
+                .map(m -> new MangaDto(
+                        m.getId(),
+                        m.getTitle(),
+                        m.getCover(),
+                        m.getRating(),
+                        m.getStatus() != null ? m.getStatus().name() : null,
+                        m.getAuthor(),
+                        m.getDescription(),
+                        m.getYear(),
+                        m.getGenres() != null
+                                ? m.getGenres().stream().map(Genre::getName).collect(Collectors.toList())
+                                : null,
+                        m.getChapters() != null ? m.getChapters().size() : 0,
+                        null // no chapter detail needed for list view
+                ));
+    }
+
+    public MangaDto getMangaById(Long id) {
+        Manga manga = mangaRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Manga not found"));
+
+        return new MangaDto(
+                manga.getId(),
+                manga.getTitle(),
+                manga.getCover(),
+                manga.getRating(),
+                manga.getStatus() != null ? manga.getStatus().name() : null,
+                manga.getAuthor(),
+                manga.getDescription(),
+                manga.getYear(),
+                manga.getGenres() != null
+                        ? manga.getGenres().stream().map(Genre::getName).collect(Collectors.toList())
+                        : null,
+                manga.getChapters() != null ? manga.getChapters().size() : 0,
+                manga.getChapters() != null
+                        ? manga.getChapters().stream()
+                                .map(ch -> new ChapterDto(ch.getNumber(), ch.getTitle(),
+                                        ch.getPages().stream()
+                                                .map(p -> p.getImageUrl())
+                                                .collect(Collectors.toList())))
+                                .collect(Collectors.toList())
+                        : null);
+    }
+
+    public MangaDto createManga(MangaDto dto) {
+        Manga manga = new Manga();
+        manga.setTitle(dto.getTitle());
+        manga.setAuthor(dto.getAuthor());
+        manga.setDescription(dto.getDescription());
+        manga.setYear(dto.getYear());
+        manga.setCover(dto.getCover());
+        manga.setRating(0.0);
+
+        if (dto.getStatus() != null) {
+            manga.setStatus(Status.fromString(dto.getStatus()));
         }
 
-        public MangaDto getMangaById(Long id) {
-                Manga manga = mangaRepository.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Manga not found"));
-
-                return new MangaDto(
-                                manga.getId(),
-                                manga.getTitle(),
-                                manga.getCover(),
-                                manga.getRating(),
-                                manga.getStatus() != null ? manga.getStatus().name() : null,
-                                manga.getAuthor(),
-                                manga.getDescription(),
-                                manga.getYear(),
-                                manga.getGenres() != null
-                                                ? manga.getGenres().stream().map(g -> g.getName())
-                                                                .collect(Collectors.toList())
-                                                : null,
-                                manga.getChapters() != null ? manga.getChapters().size() : 0,
-                                manga.getChapters() != null
-                                                ? manga.getChapters().stream()
-                                                                .map(ch -> new ChapterDto(ch.getNumber(), ch.getTitle(),
-                                                                                ch.getPages().stream()
-                                                                                                .map(p -> p.getImageUrl())
-                                                                                                .collect(Collectors
-                                                                                                                .toList())))
-                                                                .collect(Collectors.toList())
-                                                : null);
+        if (dto.getGenres() != null) {
+            List<Genre> genres = dto.getGenres().stream()
+                    .map(name -> genreRepository.findByName(name)
+                            .orElseGet(() -> genreRepository.save(new Genre(name))))
+                    .collect(Collectors.toList());
+            manga.setGenres(genres);
         }
 
-        public MangaDto createManga(MangaDto dto) {
-                Manga manga = new Manga();
+        Manga saved = mangaRepository.save(manga);
 
-                manga.setTitle(dto.getTitle());
-                manga.setAuthor(dto.getAuthor());
-                manga.setDescription(dto.getDescription());
-                manga.setYear(dto.getYear());
-                manga.setCover(dto.getCover());
-                manga.setRating(0.0);
-                if (dto.getStatus() != null) {
-                        manga.setStatus(Status.fromString(dto.getStatus()));
-                }
-
-                if (dto.getGenres() != null) {
-                        List<Genre> genres = dto.getGenres().stream()
-                                        .map(name -> genreRepository.findByName(name)
-                                                        .orElseGet(() -> genreRepository.save(new Genre(name))))
-                                        .collect(Collectors.toList());
-                        manga.setGenres(genres);
-                }
-
-                Manga saved = mangaRepository.save(manga);
-
-                return new MangaDto(
-                                saved.getId(),
-                                saved.getTitle(),
-                                saved.getCover(),
-                                saved.getRating(),
-                                saved.getStatus().name(),
-                                saved.getAuthor(),
-                                saved.getDescription(),
-                                saved.getYear(),
-                                dto.getGenres(),
-                                0,
-                                null);
-        }
-
+        return new MangaDto(
+                saved.getId(),
+                saved.getTitle(),
+                saved.getCover(),
+                saved.getRating(),
+                saved.getStatus().name(),
+                saved.getAuthor(),
+                saved.getDescription(),
+                saved.getYear(),
+                dto.getGenres(),
+                0,
+                null);
+    }
 }
